# agentic-sdlc-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.hermes.yml  docker-compose.real.yml  docker-compose.yml  pyproject.toml
.agent/agents/: README.md
.agent/protocols/: feature-lifecycle.md  tdd-contract-first.md
.agent/skills/: claude-runtime-adapter.md  graphify-knowledge-adapter.md
.git-hooks/: pre-commit  pre-push
.github/workflows/: ci.yml
config/: channel-mapping.example.toml
docs/: DOCKER_ORG_SETUP.md  IMPLEMENTATION_BACKLOG.md  RUFLO_ASSESSMENT.md  SELF_HOSTED_BOOTSTRAP_RUNBOOK.md  TDD_WORKFLOW.md
migrations/: env.py
migrations/versions/: 202604260001_create_control_plane_tables.py  202604260002_add_task_orchestration_fields.py  202604260003_create_task_dag_tables.py  202604260004_add_dag_node_orchestration_fields.py  202604260005_create_agent_session_tables.py  202604260006_create_repository_registry.py  (+6 more)
scripts/: __init__.py  enforce_agent_quality_gates.py
tests/: test_adversarial_review.py  test_agent_quality_gates.py  test_channel_cost_caps.py  test_channel_ingress.py  test_channel_mapping.py  test_claude_adapter.py  test_compose_configuration.py  test_conversation_sync.py  test_dag_completion_verifier.py  test_dag_decomposer.py  test_dag_templates.py  test_design_context_adapter.py  test_dev_services.py  test_document_context_adapter.py  test_execution_policy.py  test_github_app_adapter.py  test_github_app_credential_helper.py  test_glue.py  test_graphify_adapter.py  test_health.py  test_hermes_adapter.py  test_human_overrides.py  test_linear_adapter.py  test_linear_lifecycle.py  test_multica_adapter.py  test_multica_workspace_adapter.py  test_openai_adapter.py  test_quality_gate.py  test_repo_api.py  test_runtime_repo_sync.py  test_slack_ingress.py  test_task_dag_api.py  test_task_event_normalizer.py  test_telegram_adapter.py  test_telegram_ingress.py  test_webhook_multica_integration.py  test_webhook_persistence.py  test_webhooks.py
(+74 files in other folders)
