[project]
name = "agentic-sdlc-platform"
version = "0.1.0"
description = "Composable agentic SDLC orchestration glue for Linear, GitHub, and multi-channel engineering agents."
readme = "README.md"
authors = [
    { name = "GunnerBot", email = "GunnerBot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "schemathesis>=4.16.1",
]

[project.scripts]
agentic-sdlc-platform = "agentic_sdlc_platform.__main__:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
